--- a/README.rdoc
+++ b/README.rdoc
@@ -1,4 +1,6 @@
 == Welcome to Rails
 
 This is a simple youtube video scraper.
-to see this in action please go to url:here(www.youtube.com)
+To [see this](http://myapp.com/ "tubez") in action please click the [link](http://youtube.com/ "myapp").
+
+[see this](http://myapp.com/ "tubez")
