changed the read me

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,4 +1,4 @@
-== Welcome to Rails
+== Tubez - The youtube scraper
 
 This is a simple youtube video scraper.
 To [see this](http://myapp.com/ "tubez") in action please click the [link](http://youtube.com/ "myapp").
